Change beta banner to announce refugees

--- a/config/locales/views/layouts/de.yml
+++ b/config/locales/views/layouts/de.yml
@@ -4,6 +4,7 @@ de:
       banner:
         teaser:
           text: "clarat.org wird gerade aufgebaut."
+          refugees: "Bald auch Angebote für Flüchtlinge."
           link: "Hier erfährst du mehr"
       modal:
         beta_modal:
