Change beta banner background color to refugee color

--- a/config/locales/views/layouts/de.yml
+++ b/config/locales/views/layouts/de.yml
@@ -5,6 +5,7 @@ de:
         teaser:
           text: "clarat.org wird gerade aufgebaut."
           refugees: "Bald auch Angebote für Flüchtlinge."
+          # TODO: Delete if beta banner changes permanently
           link: "Hier erfährst du mehr"
       modal:
         beta_modal:
