for #420 - implement encounter search filtering

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -85,6 +85,7 @@ de:
           contact_type:
             personal: "vor Ort"
             remote: "virtuell"
+          encounter:
             hotline: "Telefon"
             email: "E-Mail"
             chat: "Chat"
