--- a/config/locales/views/layouts/de.yml
+++ b/config/locales/views/layouts/de.yml
@@ -3,8 +3,8 @@ de:
     partials:
       banner:
         teaser:
-          text: "clarat.org wird gerade aufgebaut."
-          refugees: "Bald auch Angebote für Flüchtlinge."
+          text: "clarat.org wird gerade aufgebaut"
+          refugees: "Bald auch Angebote für Flüchtlinge"
           # TODO: Delete if beta banner changes permanently
           link: "Hier erfährst du mehr"
       modal:
