added en locales

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -16,7 +16,7 @@ de:
       title: "Leider konnten wir den von dir eingegeben Standort nicht finden"
       text: |
         Bitte überprüfe noch mal die von dir eingegebenen Adressdaten und
-        versuche gegebenenfalls mit einer alternativen Eingabe
+        versuche es gegebenenfalls mit einer alternativen Eingabe
         (z.B. "Postleitzahl Ort").
 
     index:
