--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,83 @@
 # Please see ./README.md for more information on I18n styles and structure.
 en:
   conf: # translations used for app-internal things
-    current_location: 'My Location'
-  js:
+    current_location: 'My location'
+    default_location: 'Berlin'
+    default_latlng: '52.520007,13.404954'
+
+  js: # translations used in JavaScript. I18n-JS forces them to be located here.
     geolocation:
-      get: Use my current location!
-      waiting: Looking up your location... You might need to allow this.
-      error: Couldn't get your current location. Please enter one manually.
+      get: Use my location!
+      waiting: Searching location... You might have to allow this.
+      error: Location not found. Please enter again.
+    location_required: |
+      Please enter a location at which you want to search for help.
+    autocomplete_footer: All %{results} search results for '%{query}'
+    map_info_window_multiple:
+      title: 'Multiple offers'
+      text: 'There are multiple results for this marker.'
+      anchor: 'Show all >>'
+    cookie_warning_html: |
+      Cookies help us providing this website. By using the website you accept
+      the usage of Cookies.
+      <a href="/datenschutzhinweise">More</a>.
+    more_filter_options: 'Show more filters'
+    less_filter_options: 'Show fewer filters'
+    mobile_filter: 'Filter results'
+    ajax_error:
+      error: "Search error"
+      message: |
+        We are sorry but an error occurred during the search. Please contact us
+        if this problem reocurs.
+    query_field:
+      placeholder_words:
+        - Adoption
+        - Drugs
+        - Gewalt
+        - Nachhilfe
+        - Notfall
+        - Recht
+        - Waise
+        - arbeitslos
+        - essen
+        - krank
+        - obdachlos
+        - rauchen
+        - schwanger
+        - schwul
+        - schwänzen
+        - wohnen
+      example_placeholder: "z.B. %{word}, …"
+
+    search:
+      form_more_label: "Show search options"
+      form_less_label: "Hide search options"
+    search_results:
+      more: "More virtual offers"
+      bridge: "for"
+      enclosing: ""
+      faq_text: "If you have questions about our search you can find our FAQ "
+      faq_anchor: "here"
+      map:
+        enlarge_map: "Show big map"
+        headline_small_map: "Local offers on the map"
+      personal_offers:
+        zero: "Alas, no offers" # :P
+        one: "One local offer"
+        other: "%{count} local offers"
+      remote_offers:
+        zero: "No telephone counseling and online offers"
+        one: "One telephone counseling or one online offer"
+        other: "%{count} telephone counseling and online offers"
+
+    categories_sidebar:
+      all_categories: "All categories"
+    single_search_result:
+      encounters:
+        personal: "personal" #?
+        hotline: "telephone"
+        email: "email"
+        chat: "chat"
+        forum: "forum"
+        online-course: "online course"
+        list: "address list"
