--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -54,6 +54,7 @@ de:
       form_less_label: "Suchoptionen ausblenden"
     search_results:
       more: "Weitere Angebote"
+      show_personal: "Zeige lokale Angebote"
       bridge: "für"
       enclosing: "gefunden"
       faq_text: "Häufige Fragen und Antworten zur Suche findest du "
