franzi möchte lieber Franziska genannt werden

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -1050,7 +1050,7 @@ de:
         kann Schweres einfach erklären. Bei clarat ist sie im Research-Team. Sie
         kümmert sich auch ums Lexikon und die Nutzer. Ihr Lieblingssong ist Boat
         Behind von Kings of Convenience.
-      franzi: |
+      franziska: |
         Ist Völkerrechtlerin. Das heißt, sie weiß viel über Gesetze, die für
         alle Länder gelten. Sie kann gut komplizierte Sachen verstehen. Und
         schnell Lösungen finden. Bei clarat ist sie im Research-Team. Ihr
