--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -1088,8 +1088,8 @@ de:
       katinka: |
         Ist Psychologin. Das heißt, sie kann gut das Verhalten und die Gefühle
         von Menschen verstehen. Und sie kann gut komplizierte Dinge ordnen. Bei
-        clarat ist sie im Research-Team. Ihr Lieblingssong ist Cat Power von The
-        Greatest.
+        clarat ist sie im Research-Team. Ihr Lieblingssong ist The Greatest von
+        Cat Power.
       konstantin: |
         Ist Web-Developer. Das heißt, er kann gut Internetseiten programmieren.
         Er findet immer gute Lösungen. Bei clarat ist er im IT-Team und macht
