--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -53,7 +53,7 @@ de:
       form_more_label: "Suchoptionen einblenden"
       form_less_label: "Suchoptionen ausblenden"
     search_results:
-      more: "Weitere virtuelle Angebote"
+      more: "Weitere Telefon und Onlineangebote"
       bridge: "für"
       enclosing: "gefunden"
       faq_text: "Häufige Fragen und Antworten zur Suche findest du "
