--- a/config/locales/views/subscriptions/de.yml
+++ b/config/locales/views/subscriptions/de.yml
@@ -4,6 +4,8 @@ de:
       success: |
         Vielen Dank, wir haben soeben einen Bestätigungslink an deine E-Mail
         Adresse gesendet.
+      error: |
+        Bitte gib eine korrekte E-Mail Adresse ein.
     shared:
       new:
         placeholder: "E-Mail Adresse"
