changed some about us texts

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -1018,8 +1018,8 @@ de:
       amina: |
         Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie
         sieht schnell, was wichtig ist. Bei clarat ist sie im Research-Team. Sie
-        kümmert sich besonders um Online- und Telefonangebote. Ihr Lieblingssong
-        ist La Prima Estate von Erlend Oye.
+        entscheidet, was alles ein clarat-Angebot wird. Ihr Lieblingssong ist La
+        Prima Estate von Erlend Oye.
       andrea: |
         Hat Interkulturelles Management studiert. Das heißt, sie weiß viel über
         Wirtschaft und Kultur. Sie arbeitet sehr genau. Bei clarat ist sie im
@@ -1073,7 +1073,7 @@ de:
       jule: |
         Ist Friedens- und Konfliktforscherin. Das heißt, sie weiß viel über
         Konflikte und Krieg. Sie kann gut Lösungen finden. Bei clarat ist sie im
-        Research-Team und überprüft alle Infos für die Internetseite. Ihr
+        Research-Team. Und sie sichert sie die Qualität unserer Arbeit. Ihr
         Lieblingssong ist Home von Edward Sharpe.
       julia: |
         Ist Germanistin. Das heißt, sie kennt sich gut mit Texten und mit
