corrected minor language mistake

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -1073,7 +1073,7 @@ de:
       jule: |
         Ist Friedens- und Konfliktforscherin. Das heißt, sie weiß viel über
         Konflikte und Krieg. Sie kann gut Lösungen finden. Bei clarat ist sie im
-        Research-Team. Und sie sichert sie die Qualität unserer Arbeit. Ihr
+        Research-Team. Und sie sichert die Qualität unserer Arbeit. Ihr
         Lieblingssong ist Home von Edward Sharpe.
       julia: |
         Ist Germanistin. Das heißt, sie kennt sich gut mit Texten und mit
