for #554 - reflect translations in offer and organization view

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -45,43 +45,43 @@ de:
             girls_only: "nur für Mädchen und Frauen"
           language:
             deu: "Deutsch"
-            eng: "Englisch"
-            tur: "Türkisch"
-            tha: "Thai"
-            bul: "Bulgarisch"
-            ron: "Rumänisch"
-            sqi: "Albanisch"
-            ara: "Arabisch"
-            fra: "Französisch"
-            kur: "Kurdisch"
-            rus: "Russisch"
-            srp: "Serbisch"
-            amh: "Amharisch"
-            bos: "Bosnisch"
-            ita: "Italienisch"
-            hrv: "Kroatisch"
-            pol: "Polnisch"
-            por: "Portugiesisch"
-            vie: "Vietnamesisch"
-            wol: "Wolof"
-            fas: "Persisch (Farsi)"
-            ben: "Bengalisch"
-            spa: "Spanisch"
-            tam: "Tamil"
-            urd: "Urdu"
+            eng: "Englisch | English"
+            tur: "Türkisch | Türkçe"
+            tha: "Thai | ภาษาไทย"
+            bul: "Bulgarisch | български"
+            ron: "Rumänisch | română"
+            sqi: "Albanisch | shqip"
+            ara: "Arabisch | العربية"
+            fra: "Französisch | français"
+            kur: "Kurdisch | کوردی"
+            rus: "Russisch | русский"
+            srp: "Serbisch | српски"
+            amh: "Amharisch | አማርኛ"
+            bos: "Bosnisch | bosanski"
+            ita: "Italienisch | italiano"
+            hrv: "Kroatisch | hrvatski"
+            pol: "Polnisch | polski"
+            por: "Portugiesisch | português"
+            vie: "Vietnamesisch | tiếng Việt"
+            wol: "Wolof | wolof"
+            fas: "Persisch (Farsi) | فارسی"
+            ben: "Bengalisch | বাংলা"
+            spa: "Spanisch | español"
+            tam: "Tamil | தமிழ்"
+            urd: "Urdu | اردو"
             mul: "andere Sprachen auf Anfrage"
-            aze: "Aserbaidschanisch"
-            ell: "Griechisch"
-            hin: "Hindi"
-            mkd: "Mazedonisch"
-            rom: "Romanes"
-            hun: "Ungarisch"
-            "568": "Niederländisch"
-            "326": "Ukrainisch"
-            "639": "Dari"
+            aze: "Aserbaidschanisch | Azərbaycan"
+            ell: "Griechisch | ελληνικά"
+            hin: "Hindi | हिन्दी"
+            mkd: "Mazedonisch | македонски"
+            rom: "Romanes | Romani"
+            hun: "Ungarisch | magyar"
+            "568": "Niederländisch | Nederlands"
+            "326": "Ukrainisch | українська"
+            "639": "Dari | دری"
             "150": "Deutsche Gebärdensprache"
-            lav: "Lettisch"
-            lit: "Litauisch"
+            lav: "Lettisch | latviešu"
+            lit: "Litauisch | lietuvių"
           contact_type:
             personal: "vor Ort"
             remote: "virtuell"
@@ -101,7 +101,7 @@ de:
       what: "Worum geht's?"
       next_steps: "Was musst du tun?"
       who: "Wo gibt’s die Hilfe?"
-      last_updated: "Eintrag zuletzt bearbeitet am"
+      last_update: "Eintrag zuletzt bearbeitet am"
 
       # show partials
       opening_section:
