--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,23 +31,9 @@ en:
         if this problem reocurs.
     query_field:
       placeholder_words:
-        - Adoption
-        - Drugs
-        - Gewalt
-        - Nachhilfe
-        - Notfall
-        - Recht
-        - Waise
-        - arbeitslos
-        - essen
-        - krank
-        - obdachlos
-        - rauchen
-        - schwanger
-        - schwul
-        - schwänzen
-        - wohnen
-      example_placeholder: "z.B. %{word}, …"
+        - adoption
+        - drugs
+      example_placeholder: "e.g. %{word}, …"
 
     search:
       form_more_label: "show search options"
