--- a/config/locales/views/shareds/en.yml
+++ b/config/locales/views/shareds/en.yml
@@ -5,3 +5,7 @@ en:
     show:
       cta_report_errors: |
         Did you find an error?
+      google_translate_explanation: |
+        This translation was automatically made by Google Translate. Those
+        translations usually contain errors. They may sound a bit strange. In
+        that case you should have a look at the German original.
