hot-fixed wording mistake

--- a/config/locales/views/organizations/de.yml
+++ b/config/locales/views/organizations/de.yml
@@ -2,5 +2,5 @@ de:
   organizations:
     show:
       who: "Was macht die Organisation?"
-      where: "Wo ist die Organisation?"
+      where: "Wo findest du die Organisation?"
       offers_all: "Welche Hilfe bietet diese Organisation?"
