Changed encounter wording in advanced search options

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -84,7 +84,7 @@ de:
             lit: "Litauisch"
           contact_type:
             personal: "vor Ort"
-            remote: "virtuell"
+            remote: "telefonisch oder online"
           encounter:
             hotline: "Telefon"
             email: "E-Mail"
