--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -6,7 +6,7 @@ de:
         loc_placeholder:
           long: "Adresse, Stadtteil, Stadt oder PLZ"
           short: "Stadt, PLZ, …"
-        query_label: "Finde"
+        query_label: "Was"
         query_placeholder:
           long: "Angebote zum Thema …"
           short: "Angebote zu …"
