clarat-org/clarat#608 moved from modules to activescript and implemented section switch

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -30,7 +30,7 @@ de:
         Tut uns leid, es ist ein Fehler bei der Suche aufgetreten. Wenn dieses
         Problem wiederholt auftritt, kontaktiere uns bitte.
     query_field:
-      placeholder_words:
+      placeholder_words_family:
         - Adoption
         - Drogen
         - Gewalt
@@ -47,6 +47,15 @@ de:
         - schwul
         - schwänzen
         - wohnen
+      placeholder_words_refugees:
+        - Staatsbürgerschaft
+        - Deutschkurs
+        - Anerkennung
+        - Kriegstrauma
+        - Asylverfahren
+        - Gesundheitsversorgung
+        - Behörden
+        - Aufenthaltsrecht
       example_placeholder: "z.B. %{word}, …"
 
     search:
