Change search placeholder words for famliy

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -32,21 +32,18 @@ de:
     query_field:
       placeholder_words:
         family:
-          - Adoption
           - Drogen
           - Gewalt
           - Nachhilfe
           - Notfall
           - Recht
-          - Waise
           - arbeitslos
-          - essen
-          - krank
+          - Erziehungsprobleme
+          - Essstörung
           - obdachlos
-          - rauchen
+          - Familienprobleme
           - schwanger
-          - schwul
-          - schwänzen
+          - Streit
           - wohnen
         refugees:
           - Staatsbürgerschaft
