added locale entries for new encounter

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -90,4 +90,4 @@ de:
         chat: "Chat"
         forum: "Forum"
         online-course: "Online-Kurs"
-        list: "Adressliste"
+        portal: "Adressliste"
