--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -82,6 +82,7 @@ de:
             "150": "Deutsche Gebärdensprache"
             lav: "Lettisch"
             lit: "Litauisch"
+            kik: "Kikuyu"
           contact_type:
             personal: "vor Ort"
             remote: "telefonisch oder online"
