fix: updated _base for missing languages and added them to locale

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -69,7 +69,7 @@ de:
             spa: "Spanisch"
             tam: "Tamil"
             urd: "Urdu"
-            mul: "andere Sprachen auf Anfrage"
+            mul: "weitere Sprachen auf Anfrage"
             aze: "Aserbaidschanisch"
             ell: "Griechisch"
             hin: "Hindi"
@@ -83,6 +83,19 @@ de:
             lav: "Lettisch"
             lit: "Litauisch"
             kik: "Kikuyu"
+            zho: "Chinesisch"
+            swa: "Kiswahili"
+            luo: "Luo"
+            ltz: "Luxemburgisch"
+            nor: "Norwegisch"
+            swe: "Schwedisch"
+            snk: "Soninke"
+            tgk: "Tadschikisch"
+            tel: "Telugu"
+            tuk: "Turkmenisch"
+            uzb: "Usbekisch"
+            bel: "Weißrussisch"
+            zza: "Zaza"
           contact_type:
             personal: "vor Ort"
             remote: "telefonisch oder online"
