Basic implementation of frontend output of spoken languages

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -116,7 +116,84 @@ de:
       what: "Worum geht's?"
       next_steps: "Was musst du tun?"
       who: "Wo gibt’s die Hilfe?"
+      speaking: "Verfügbar in welcher Sprache?"
+      lang_list_toggle:
+        more: "Mehr Sprachen zeigen"
+        less: "Weniger Sprachen zeigen"
       last_updated: "Eintrag zuletzt bearbeitet am"
+      currentlocale:
+        eng: "Englisch"
+        deu: "Deutsch"
+        fra: "Französisch"
+        tur: "Türkisch"
+        ara: "Arabisch"
+        rus: "Russisch"
+        spa: "Spanisch"
+        tha: "Thai"
+        bul: "Bulgarisch"
+        kur: "Kurdisch"
+        srp: "Serbisch"
+        amh: "Amharisch"
+        bos: "Bosnisch"
+        ita: "Italienisch"
+        hrv: "Kroatisch"
+        pol: "Polnisch"
+        por: "Portugiesisch"
+        vie: "Vietnamesisch"
+        wol: "Wolof"
+        ben: "Bengalisch"
+        fas: "Persisch (Farsi)"
+        tam: "Tamil"
+        urd: "Urdu"
+        aze: "Aserbaidschanisch"
+        ell: "Griechisch"
+        hin: "Hindi"
+        mkd: "Mazedonisch"
+        rom: "Romanes"
+        hun: "Ungarisch"
+        "568": "Niederländisch"
+        "326": "Ukrainisch"
+        "639": "Dari"
+        "150": "Deutsche Gebärdensprache"
+        lav: "Lettisch"
+        lit: "Litauisch"
+
+      original:
+        eng: "English"
+        deu: "Deutsch"
+        fra: "français"
+        tur: "TÜRKÇE"
+        ara: "عربي"
+        rus: "НА РУССКОМ"
+        spa: "MUNDO"
+        tha: "ภาษาไทย"
+        bul: "български"
+        kur: "کوردی"
+        srp: "српски"
+        amh: "አማርኛ"
+        bos: "bosanski"
+        ita: "italiano"
+        hrv: "hrvatski"
+        pol: "polski"
+        por: "português"
+        vie: "tiếng Việt"
+        wol: "wolof"
+        ben: "বাংলা"
+        fas: "فارسی"
+        tam: "தமிழ்"
+        urd: "اردو"
+        aze: "Azərbaycan"
+        ell: "ελληνικά"
+        hin: "हिन्दी"
+        mkd: "македонски"
+        rom: "Romani"
+        hun: "magyar"
+        "568": "Nederlands"
+        "326": "українська"
+        "639": "دری"
+        "150": "Deutsche Gebärdensprache"
+        lav: "latviešu"
+        lit: "lietuvių"
 
       # show partials
       opening_section:
