--- a/config/locales/views/offers/fr.yml
+++ b/config/locales/views/offers/fr.yml
@@ -1,4 +1,3 @@
-# TODO
 fr:
   offers:
     shared:
@@ -7,7 +6,7 @@ fr:
         loc_placeholder:
           long: "Adresse, Stadtteil, Stadt oder PLZ"
           short: "Stadt, PLZ, …"
-        query_label: "Finde"
+        query_label: "Was"
         query_placeholder:
           long: "Angebote zum Thema …"
           short: "Angebote zu …"
@@ -17,7 +16,7 @@ fr:
       title: "Leider konnten wir den von dir eingegeben Standort nicht finden"
       text: |
         Bitte überprüfe noch mal die von dir eingegebenen Adressdaten und
-        versuche es gegebenenfalls mit einer alternativen Eingabe
+        versuche gegebenenfalls mit einer alternativen Eingabe
         (z.B. "Postleitzahl Ort").
 
     index:
@@ -46,52 +45,67 @@ fr:
             girls_only: "nur für Mädchen und Frauen"
           language:
             deu: "Deutsch"
-            eng: "Englisch | English"
-            tur: "Türkisch | Türkçe"
-            tha: "Thai | ภาษาไทย"
-            bul: "Bulgarisch | български"
-            ron: "Rumänisch | română"
-            sqi: "Albanisch | shqip"
-            ara: "Arabisch | العربية"
-            fra: "Französisch | français"
-            kur: "Kurdisch | کوردی"
-            rus: "Russisch | русский"
-            srp: "Serbisch | српски"
-            amh: "Amharisch | አማርኛ"
-            bos: "Bosnisch | bosanski"
-            ita: "Italienisch | italiano"
-            hrv: "Kroatisch | hrvatski"
-            pol: "Polnisch | polski"
-            por: "Portugiesisch | português"
-            vie: "Vietnamesisch | tiếng Việt"
-            wol: "Wolof | wolof"
-            fas: "Persisch (Farsi) | فارسی"
-            ben: "Bengalisch | বাংলা"
-            spa: "Spanisch | español"
-            tam: "Tamil | தமிழ்"
-            urd: "Urdu | اردو"
-            mul: "andere Sprachen auf Anfrage"
-            aze: "Aserbaidschanisch | Azərbaycan"
-            ell: "Griechisch | ελληνικά"
-            hin: "Hindi | हिन्दी"
-            mkd: "Mazedonisch | македонски"
-            rom: "Romanes | Romani"
-            hun: "Ungarisch | magyar"
-            "568": "Niederländisch | Nederlands"
-            "326": "Ukrainisch | українська"
-            "639": "Dari | دری"
+            eng: "Englisch"
+            tur: "Türkisch"
+            tha: "Thai"
+            bul: "Bulgarisch"
+            ron: "Rumänisch"
+            sqi: "Albanisch"
+            ara: "Arabisch"
+            fra: "Französisch"
+            kur: "Kurdisch"
+            rus: "Russisch"
+            srp: "Serbisch"
+            amh: "Amharisch"
+            bos: "Bosnisch"
+            ita: "Italienisch"
+            hrv: "Kroatisch"
+            pol: "Polnisch"
+            por: "Portugiesisch"
+            vie: "Vietnamesisch"
+            wol: "Wolof"
+            fas: "Persisch (Farsi)"
+            ben: "Bengalisch"
+            spa: "Spanisch"
+            tam: "Tamil"
+            urd: "Urdu"
+            mul: "weitere Sprachen auf Anfrage"
+            aze: "Aserbaidschanisch"
+            ell: "Griechisch"
+            hin: "Hindi"
+            mkd: "Mazedonisch"
+            rom: "Romanes"
+            hun: "Ungarisch"
+            "568": "Niederländisch"
+            "326": "Ukrainisch"
+            "639": "Dari"
             "150": "Deutsche Gebärdensprache"
-            lav: "Lettisch | latviešu"
-            lit: "Litauisch | lietuvių"
+            lav: "Lettisch"
+            lit: "Litauisch"
+            kik: "Kikuyu"
+            zho: "Chinesisch"
+            swa: "Kiswahili"
+            luo: "Luo"
+            ltz: "Luxemburgisch"
+            nor: "Norwegisch"
+            swe: "Schwedisch"
+            snk: "Soninke"
+            tgk: "Tadschikisch"
+            tel: "Telugu"
+            tuk: "Turkmenisch"
+            uzb: "Usbekisch"
+            bel: "Weißrussisch"
+            zza: "Zaza"
           contact_type:
             personal: "vor Ort"
-            remote: "virtuell"
+            remote: "telefonisch oder online"
           encounter:
             hotline: "Telefon"
             email: "E-Mail"
             chat: "Chat"
             forum: "Forum"
             online-course: "Online-Kurs"
+            portal: "Adressliste"
 
       map_sidebar:
         map_output_searchresults: Kartenausgabe der Suchergebnisse
@@ -102,7 +116,7 @@ fr:
       what: "Worum geht's?"
       next_steps: "Was musst du tun?"
       who: "Wo gibt’s die Hilfe?"
-      last_update: "Eintrag zuletzt bearbeitet am"
+      last_updated: "Eintrag zuletzt bearbeitet am"
 
       # show partials
       opening_section:
