Simplify current and original locale strings

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -121,81 +121,43 @@ de:
         more: "Mehr Sprachen zeigen"
         less: "Weniger Sprachen zeigen"
       last_updated: "Eintrag zuletzt bearbeitet am"
-      currentlocale:
-        eng: "Englisch"
+      current_and_original_locale:
+        eng: "Englisch - English"
         deu: "Deutsch"
-        fra: "Französisch"
-        tur: "Türkisch"
-        ara: "Arabisch"
-        rus: "Russisch"
-        spa: "Spanisch"
-        tha: "Thai"
-        bul: "Bulgarisch"
-        kur: "Kurdisch"
-        srp: "Serbisch"
-        amh: "Amharisch"
-        bos: "Bosnisch"
-        ita: "Italienisch"
-        hrv: "Kroatisch"
-        pol: "Polnisch"
-        por: "Portugiesisch"
-        vie: "Vietnamesisch"
-        wol: "Wolof"
-        ben: "Bengalisch"
-        fas: "Persisch (Farsi)"
-        tam: "Tamil"
-        urd: "Urdu"
-        aze: "Aserbaidschanisch"
-        ell: "Griechisch"
-        hin: "Hindi"
-        mkd: "Mazedonisch"
-        rom: "Romanes"
-        hun: "Ungarisch"
-        "568": "Niederländisch"
-        "326": "Ukrainisch"
-        "639": "Dari"
+        fra: "Französisch - Français"
+        tur: "Türkisch - TÜRKÇE"
+        ara: "Arabisch - عربي"
+        rus: "Russisch - НА РУССКОМ"
+        spa: "Spanisch - MUNDO"
+        tha: "Thai - ภาษาไทย"
+        bul: "Bulgarisch - български"
+        kur: "Kurdisch - کوردی"
+        srp: "Serbisch - српски"
+        amh: "Amharisch - አማርኛ"
+        bos: "Bosnisch - bosanski"
+        ita: "Italienisch - italiano"
+        hrv: "Kroatisch - hrvatski"
+        pol: "Polnisch - polski"
+        por: "Portugiesisch - português"
+        vie: "Vietnamesisch - tiếng Việt"
+        wol: "Wolof - wolof"
+        ben: "Bengalisch - বাংলা"
+        fas: "Persisch (Farsi) - فارسی"
+        tam: "Tamil - தமிழ்"
+        urd: "Urdu - اردو"
+        aze: "Aserbaidschanisch - Azərbaycan"
+        ell: "Griechisch - ελληνικά"
+        hin: "Hindi - हिन्दी"
+        mkd: "Mazedonisch - македонски"
+        rom: "Romanes - Romani"
+        hun: "Ungarisch - magyar"
+        "568": "Niederländisch - Nederlands"
+        "326": "Ukrainisch - українська"
+        "639": "Dari - دری"
         "150": "Deutsche Gebärdensprache"
-        lav: "Lettisch"
-        lit: "Litauisch"
+        lav: "Lettisch - latviešu"
+        lit: "Litauisch - lietuvių"
 
-      original:
-        eng: "English"
-        deu: "Deutsch"
-        fra: "français"
-        tur: "TÜRKÇE"
-        ara: "عربي"
-        rus: "НА РУССКОМ"
-        spa: "MUNDO"
-        tha: "ภาษาไทย"
-        bul: "български"
-        kur: "کوردی"
-        srp: "српски"
-        amh: "አማርኛ"
-        bos: "bosanski"
-        ita: "italiano"
-        hrv: "hrvatski"
-        pol: "polski"
-        por: "português"
-        vie: "tiếng Việt"
-        wol: "wolof"
-        ben: "বাংলা"
-        fas: "فارسی"
-        tam: "தமிழ்"
-        urd: "اردو"
-        aze: "Azərbaycan"
-        ell: "ελληνικά"
-        hin: "हिन्दी"
-        mkd: "македонски"
-        rom: "Romani"
-        hun: "magyar"
-        "568": "Nederlands"
-        "326": "українська"
-        "639": "دری"
-        "150": "Deutsche Gebärdensprache"
-        lav: "latviešu"
-        lit: "lietuvių"
-
-      # show partials
       opening_section:
         heading: "Wann kannst du das machen?"
         days:
