--- a/config/locales/views/emails/de.yml
+++ b/config/locales/views/emails/de.yml
@@ -3,7 +3,7 @@ de:
     subscribe:
       success_html: |
         Du hast dich erfolgreich für Benachrichtigungen zu Angeboten mit deiner
-        Email-Adresse angemeldet.
+        E-mail-Adresse angemeldet.
         (<a href="%{unsubscribe_href}">wieder abmelden</a>)
     unsubscribe:
       success_html: |
@@ -13,22 +13,22 @@ de:
     offers_index:
       family:
         heading: |
-          Deine Family-Angebote für <span id="secure-email-0">%{email}</span>
+          Deine clarat family-Angebote für <span id="secure-email-0">%{email}</span>
         no_results: |
-          Es gibt derzeit keine veröffentlichten Family-Angebote für
+          Es gibt derzeit keine veröffentlichten clarat family-Angebote für
           <span id="secure-email-0">%{email}</span>
         toggle_section_html:
-          one: "Dein <strong>clarat-Refugees</strong>-Angebot"
-          other: "Deine <strong>%{count} clarat-Refugees</strong>-Angebote"
+          one: "Dein <strong>clarat refugees</strong>-Angebot"
+          other: "Deine <strong>%{count} clarat refugees</strong>-Angebote"
       refugees:
         heading: |
-          Deine Refugees-Angebote für <span id="secure-email-0">%{email}</span>
+          Deine clarat refugees-Angebote für <span id="secure-email-0">%{email}</span>
         no_results: |
-          Es gibt derzeit keine veröffentlichten Refugees-Angebote für
+          Es gibt derzeit keine veröffentlichten clarat refugees-Angebote für
           <span id="secure-email-0">%{email}</span>
         toggle_section_html:
-          one: "Dein <strong>clarat-Family</strong>-Angebot"
-          other: "Deine <strong>%{count} clarat-Family</strong>-Angebote"
+          one: "Dein <strong>clarat family</strong>-Angebot"
+          other: "Deine <strong>%{count} clarat family</strong>-Angebote"
       shared:
         info: Info
         explanation_1: |
@@ -37,12 +37,12 @@ de:
           haben.
         explanation_2: |
           Wenn wir in Zukunft neue Angebote von dir finden, siehst du die Links zu
-          diesen neuen Angebote bei auch hier.
+          diesen neuen Angeboten auch hier.
         explanation_3: |
           Du kannst dazu diese Seite in deinen Favoriten speichern und so schnell
           auf einen Blick sehen, was es von dir bei clarat gibt.
         explanation_4: |
           Möchtest du per E-Mail informiert werden, wenn neue Angebote von dir bei
-          clarat online sind? Dann klicke unten auf Anmelden. Oder nutze den Link
-          am Ende der E-Mail, die du von uns bekommen hast.
+          clarat online sind? Dann nutze den Link am Ende der E-Mail, die du von
+          uns bekommen hast.
       obfuscated_email: "deiner E-Mail-Adresse"
