hot-fixed some locale entries

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -125,10 +125,10 @@ de:
         eng: "Englisch - English"
         deu: "Deutsch"
         fra: "Französisch - Français"
-        tur: "Türkisch - TÜRKÇE"
+        tur: "Türkisch - Türkçe"
         ara: "Arabisch - عربي"
-        rus: "Russisch - НА РУССКОМ"
-        spa: "Spanisch - MUNDO"
+        rus: "Russisch - русский"
+        spa: "Spanisch - español"
         tha: "Thai - ภาษาไทย"
         bul: "Bulgarisch - български"
         kur: "Kurdisch - کوردی"
@@ -140,7 +140,7 @@ de:
         pol: "Polnisch - polski"
         por: "Portugiesisch - português"
         vie: "Vietnamesisch - tiếng Việt"
-        wol: "Wolof - wolof"
+        wol: "Wolof - wɔlɔf"
         ben: "Bengalisch - বাংলা"
         fas: "Persisch (Farsi) - فارسی"
         tam: "Tamil - தமிழ்"
